--- a/edit_1.ui
+++ b/edit_1.ui
@@ -204,7 +204,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEdit">
+     <widget class="QLineEdit" name="lineEdit_1">
       <property name="font">
        <font>
         <pointsize>16</pointsize>
@@ -222,6 +222,13 @@
         <weight>75</weight>
         <bold>true</bold>
        </font>
+      </property>
+      <property name="date">
+       <date>
+        <year>2020</year>
+        <month>1</month>
+        <day>1</day>
+       </date>
       </property>
      </widget>
     </item>
@@ -310,6 +317,13 @@
         <weight>75</weight>
         <bold>true</bold>
        </font>
+      </property>
+      <property name="date">
+       <date>
+        <year>2020</year>
+        <month>1</month>
+        <day>1</day>
+       </date>
       </property>
      </widget>
     </item>
