--- a/test2.ui
+++ b/test2.ui
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mainWindow</class>
- <widget class="QMainWindow" name="mainWindow">
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
+    <width>1200</width>
     <height>1100</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>900</width>
+    <width>1200</width>
     <height>1100</height>
    </size>
   </property>
-  <property name="font">
-   <font>
-    <pointsize>9</pointsize>
-    <weight>50</weight>
-    <bold>false</bold>
-    <stylestrategy>PreferAntialias</stylestrategy>
-   </font>
-  </property>
   <property name="windowTitle">
-   <string>编辑窗口</string>
+   <string>MainWindow</string>
   </property>
   <property name="iconSize">
    <size>
@@ -36,57 +28,12 @@
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonTextUnderIcon</enum>
   </property>
-  <property name="documentMode">
-   <bool>false</bool>
-  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton_4">
-    <property name="geometry">
-     <rect>
-      <x>550</x>
-      <y>930</y>
-      <width>131</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-      <stylestrategy>PreferAntialias</stylestrategy>
-     </font>
-    </property>
-    <property name="text">
-     <string>下一条</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_5">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>930</y>
-      <width>131</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-      <stylestrategy>PreferAntialias</stylestrategy>
-     </font>
-    </property>
-    <property name="text">
-     <string>退  出</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_1">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>930</y>
+      <x>190</x>
+      <y>960</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -102,56 +49,26 @@
     <property name="text">
      <string>保  存</string>
     </property>
-   </widget>
-   <widget class="QLabel" name="label_1">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>11</y>
-      <width>241</width>
-      <height>41</height>
-     </rect>
+    <property name="icon">
+     <iconset>
+      <normaloff>exit.jpg</normaloff>
+      <normalon>print.jpg</normalon>
+      <activeoff>delete2.jpg</activeoff>
+      <activeon>delete.jpg.png</activeon>
+      <selectedon>submit2.jpg</selectedon>exit.jpg</iconset>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(0, 170, 0);</string>
-    </property>
-    <property name="text">
-     <string>数据编辑：</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>930</y>
-      <width>131</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-      <stylestrategy>PreferAntialias</stylestrategy>
-     </font>
-    </property>
-    <property name="text">
-     <string>删  除</string>
+    <property name="iconSize">
+     <size>
+      <width>40</width>
+      <height>40</height>
+     </size>
     </property>
    </widget>
    <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>70</y>
+      <x>190</x>
+      <y>100</y>
       <width>831</width>
       <height>831</height>
      </rect>
@@ -549,11 +466,97 @@
      </item>
     </layout>
    </widget>
+   <widget class="QPushButton" name="pushButton_5">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>960</y>
+      <width>131</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+      <stylestrategy>PreferAntialias</stylestrategy>
+     </font>
+    </property>
+    <property name="text">
+     <string>退  出</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>960</y>
+      <width>131</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+      <stylestrategy>PreferAntialias</stylestrategy>
+     </font>
+    </property>
+    <property name="text">
+     <string>删  除</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_1">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>41</y>
+      <width>241</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 170, 0);</string>
+    </property>
+    <property name="text">
+     <string>数据编辑：</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>960</y>
+      <width>131</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+      <stylestrategy>PreferAntialias</stylestrategy>
+     </font>
+    </property>
+    <property name="text">
+     <string>下一条</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>930</y>
+      <x>360</x>
+      <y>960</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -570,420 +573,70 @@
      <string>新  増</string>
     </property>
    </widget>
+   <widget class="QLCDNumber" name="lcdNumber">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>40</y>
+      <width>231</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:rgb(0, 0, 255)</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::WinPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <property name="lineWidth">
+     <number>4</number>
+    </property>
+    <property name="midLineWidth">
+     <number>1</number>
+    </property>
+    <property name="digitCount">
+     <number>8</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>47</y>
+      <width>111</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>记录号：</string>
+    </property>
+   </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>900</width>
-     <height>37</height>
-    </rect>
-   </property>
+  <widget class="QStatusBar" name="statusbar">
    <property name="font">
     <font>
      <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-     <stylestrategy>PreferAntialias</stylestrategy>
     </font>
    </property>
-   <widget class="QMenu" name="menu">
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="title">
-     <string>系统导航</string>
-    </property>
-    <addaction name="action11"/>
-    <addaction name="separator"/>
-    <addaction name="action12"/>
-    <addaction name="separator"/>
-    <addaction name="action13"/>
-    <addaction name="separator"/>
-    <addaction name="action14"/>
-    <addaction name="separator"/>
-    <addaction name="action15"/>
-    <addaction name="separator"/>
-    <addaction name="action16"/>
-    <addaction name="separator"/>
-    <addaction name="action17"/>
-    <addaction name="separator"/>
-    <addaction name="action18"/>
-    <addaction name="separator"/>
-    <addaction name="action19"/>
-    <addaction name="separator"/>
-    <addaction name="action1A"/>
-    <addaction name="separator"/>
-    <addaction name="action1B"/>
-   </widget>
-   <widget class="QMenu" name="menu_2">
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="title">
-     <string>数据编辑</string>
-    </property>
-    <addaction name="action21"/>
-    <addaction name="action22"/>
-    <addaction name="action23"/>
-    <addaction name="action24"/>
-    <addaction name="separator"/>
-    <addaction name="action25"/>
-    <addaction name="action26"/>
-   </widget>
-   <widget class="QMenu" name="menu_3">
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="title">
-     <string>保存数据</string>
-    </property>
-    <addaction name="action31"/>
-    <addaction name="action32"/>
-    <addaction name="action33"/>
-    <addaction name="action34"/>
-    <addaction name="separator"/>
-    <addaction name="action35"/>
-   </widget>
-   <widget class="QMenu" name="menu_4">
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-      <stylestrategy>PreferAntialias</stylestrategy>
-     </font>
-    </property>
-    <property name="title">
-     <string>返回主页</string>
-    </property>
-    <addaction name="action41"/>
-    <addaction name="separator"/>
-    <addaction name="action42"/>
-    <addaction name="separator"/>
-    <addaction name="action43"/>
-   </widget>
-   <widget class="QMenu" name="menu_5">
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="title">
-     <string>帮助</string>
-    </property>
-    <addaction name="action51"/>
-    <addaction name="separator"/>
-    <addaction name="action52"/>
-    <addaction name="separator"/>
-    <addaction name="action53"/>
-   </widget>
-   <addaction name="menu"/>
-   <addaction name="menu_2"/>
-   <addaction name="menu_3"/>
-   <addaction name="menu_4"/>
-   <addaction name="menu_5"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <action name="action11">
-   <property name="icon">
-    <iconset>
-     <normalon>hetong2.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>合同管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+C</string>
-   </property>
-  </action>
-  <action name="action12">
-   <property name="icon">
-    <iconset>
-     <normalon>zijin1.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>资金管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>11</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+M</string>
-   </property>
-  </action>
-  <action name="action13">
-   <property name="icon">
-    <iconset>
-     <normalon>Present.png</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>产品管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+P</string>
-   </property>
-  </action>
-  <action name="action14">
-   <property name="icon">
-    <iconset>
-     <normalon>wuliu2.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>进销管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+S</string>
-   </property>
-  </action>
-  <action name="action15">
-   <property name="icon">
-    <iconset>
-     <normalon>wuliu3.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>渠道管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Q</string>
-   </property>
-  </action>
-  <action name="action16">
-   <property name="icon">
-    <iconset>
-     <normalon>ouster.png</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>客户管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Y</string>
-   </property>
-  </action>
-  <action name="action17">
-   <property name="icon">
-    <iconset>
-     <normalon>hezuohuoban2.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>服务管理</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+F</string>
-   </property>
-  </action>
-  <action name="action21">
-   <property name="text">
-    <string>修改数据</string>
-   </property>
-  </action>
-  <action name="action22">
-   <property name="text">
-    <string>插入数据</string>
-   </property>
-  </action>
-  <action name="action23">
-   <property name="text">
-    <string>删除数据</string>
-   </property>
-  </action>
-  <action name="action24">
-   <property name="text">
-    <string>更新数据</string>
-   </property>
-  </action>
-  <action name="action25">
-   <property name="text">
-    <string>数据备份</string>
-   </property>
-  </action>
-  <action name="action26">
-   <property name="text">
-    <string>数据恢复</string>
-   </property>
-  </action>
-  <action name="action31">
-   <property name="text">
-    <string>保存为Excel</string>
-   </property>
-  </action>
-  <action name="action32">
-   <property name="text">
-    <string>保存为Word</string>
-   </property>
-  </action>
-  <action name="action33">
-   <property name="text">
-    <string>保存为Txt</string>
-   </property>
-  </action>
-  <action name="action34">
-   <property name="text">
-    <string>保存为图片</string>
-   </property>
-  </action>
-  <action name="action35">
-   <property name="text">
-    <string>打印报表</string>
-   </property>
-  </action>
-  <action name="action41">
-   <property name="text">
-    <string>返回主页</string>
-   </property>
-  </action>
-  <action name="action42">
-   <property name="text">
-    <string>退出系统</string>
-   </property>
-  </action>
-  <action name="action43">
-   <property name="text">
-    <string>关闭电脑</string>
-   </property>
-  </action>
-  <action name="action51">
-   <property name="text">
-    <string>帮助文档</string>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-  </action>
-  <action name="action52">
-   <property name="text">
-    <string>版权声明</string>
-   </property>
-  </action>
-  <action name="action53">
-   <property name="text">
-    <string>关于</string>
-   </property>
-  </action>
-  <action name="action18">
-   <property name="icon">
-    <iconset>
-     <normalon>tuandui8.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>人员管理</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+R</string>
-   </property>
-  </action>
-  <action name="action19">
-   <property name="icon">
-    <iconset>
-     <normalon>yeji.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>业绩管理</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+A</string>
-   </property>
-  </action>
-  <action name="action1A">
-   <property name="icon">
-    <iconset>
-     <normalon>kufang6.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>仓储管理</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+K</string>
-   </property>
-  </action>
-  <action name="action1B">
-   <property name="icon">
-    <iconset>
-     <normalon>wuliu3.jpg</normalon>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>物流管理</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+W</string>
-   </property>
-  </action>
  </widget>
  <resources/>
  <connections/>
